--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sacred Control - Pilgrimage Management Dashboard</title>
+    <title>Pilgrimage Management Dashboard</title>
     <meta name="description" content="Advanced pilgrimage site management dashboard for crowd control, safety monitoring, and visitor flow optimization" />
     <meta name="author" content="Sacred Control Systems" />
+    <link rel="icon" type="image/x-icon" href="logo_sih.png" />
 
     <meta property="og:title" content="Sacred Control - Pilgrimage Management Dashboard" />
     <meta property="og:description" content="Advanced pilgrimage site management dashboard for crowd control, safety monitoring, and visitor flow optimization" />
